--- a/_posts/2023-06-23-boj-2579.md
+++ b/_posts/2023-06-23-boj-2579.md
@@ -1,5 +1,5 @@
 ---
-title: [백준 2579] 계단오르기 파이썬 풀이 - DP
+title: "[백준 2579] 계단오르기 파이썬 풀이 - DP"
 date: 2023-06-23 14:48:00 +0900
 categories: [알고리즘, DP]
 tags: [dp, 백준]
